--- a/calc.html
+++ b/calc.html
@@ -186,7 +186,7 @@
                 </td>
                 <td>敌方防御力Buff(%)</td>
                 <td>
-                    <input type="text" id="txtEnemyDefence" value="0" />
+                    <input type="text" id="txtEnemyDefence" value="0" basevalue="0"/>
                 </td>
             </tr>
             <tr>
@@ -535,7 +535,7 @@
         let servant = servants[id];
 	let npEffect = servant.npEffect;
 	let isNpRemainHpDamage = (npEffect && npEffect.npRemainHpDamage);
-        if (servant.oc["type"] == "NpRemainHpDamage" || isNpRemainHpDamage) {//双子宝具特攻
+        if (servant.oc.type == "NpRemainHpDamage" || isNpRemainHpDamage) {//双子宝具特攻
             calNpRemainHpDamage();
         }
     }
@@ -554,7 +554,7 @@
         let remainHp = getFloat("txtRemainHp");
         //附加倍率
         let additionalCoef = 0;
-	if(ocs["type"] == "NpRemainHpDamage") {
+	if(ocs.type == "NpRemainHpDamage") {
             additionalCoef = servant.oc[ocLevel] * Math.max(0, 1 - remainHp / totalHp);
 	}
 	else if(npEffect && npEffect.npRemainHpDamage) {
@@ -648,12 +648,18 @@
 	if (npEffect && npEffect.npSpecialAttack) {
             $("txtNpSpecialAttack").value = npSpecialAttack;
         }
+	if (npEffect && npEffect.defDecrease) {
+	    $("txtEnemyDefence").basevalue = 0 - npEffect.defDecrease;
+	}
+	else {
+	    $("txtEnemyDefence").basevalue = 0;
+	}
     }
     function clearBuff(){
 	$("txtNpStrength").value = $("txtNpStrength").basevalue;
 	$("txtCardBuff").value = $("txtCardBuff").basevalue;
 	$("txtAttackBuff").value = 0;
-        $("txtEnemyDefence").value = 0;
+        $("txtEnemyDefence").value = $("txtEnemyDefence").basevalue;
         $("txtSpecialAttack").value = 0;
 	$("txtDamagePlus").value = $("txtDamagePlus").basevalue;
 	$("txtNpGainBuff").value = 0;
@@ -674,32 +680,32 @@
 	if (ocs["oc1"] == ocs["oc5"]) {
 	    $("ddlOvercharge").selectedIndex = 0;
 	}
-	if (ocs["type"] == "NpRemainHpDamage") {//双子宝具倍率提升
+	if (ocs.type == "NpRemainHpDamage") {//双子宝具倍率提升
             calNpRemainHpDamage();
         }
-        else if (ocs["type"] == "OcNpDamage") {//自爆弓倍率提升
+        else if (ocs.type == "OcNpDamage") {//自爆弓倍率提升
             calOcNpDamage();
         }
-	else if (ocs["type"] == "OcCardBuff") {//R金时OC绿魔放
+	else if (ocs.type == "OcCardBuff") {//R金时OC绿魔放
             $("txtCardBuff").value = $("txtCardBuff").basevalue + ocs[ocLevel];
         }
-        else if (ocs["type"] == "OcAtkBuff") {//B兰OC加攻
+        else if (ocs.type == "OcAtkBuff") {//B兰OC加攻
             $("txtAttackBuff").value = ocs[ocLevel];
         }
-        else if (ocs["type"] == "DefDecrease") {//宝具前降防
-            $("txtEnemyDefence").value = 0 - ocs[ocLevel];
+        else if (ocs.type == "DefDecrease") {//宝具前降防
+            $("txtEnemyDefence").value = $("txtEnemyDefence").basevalue - ocs[ocLevel];
         }
-        else if (ocs["type"] == "OcNpStrength") {//宫本半藏OC宝具威力提升
+        else if (ocs.type == "OcNpStrength") {//宫本半藏OC宝具威力提升
             $("txtNpStrength").value = $("txtNpStrength").basevalue + ocs[ocLevel];
         }
-	else if (ocs["type"] == "CombinedDecrease") {
-	    $("txtEnemyDefence").value = 0 - ocs[ocLevel];
+	else if (ocs.type == "CombinedDecrease") {
+	    $("txtEnemyDefence").value = $("txtEnemyDefence").basevalue - ocs[ocLevel];
 	    $("txtCardBuff").value = $("txtCardBuff").basevalue + ocs[ocLevel];
 	}
-	else if (ocs["type"] == "NpSpecialAttack") {//宝具特攻
+	else if (ocs.type == "NpSpecialAttack") {//宝具特攻
             $("txtNpSpecialAttack").value = ocs[ocLevel];
         }
-        else if (ocs["type"] == "SpecialAttackBuff") {//杰克女性特攻
+        else if (ocs.type == "SpecialAttackBuff") {//杰克女性特攻
             $("txtSpecialAttack").value = ocs[ocLevel];
         }
     }
@@ -716,38 +722,38 @@
 	if(ocs["oc1"] == ocs["oc5"]){
 	    $("ddlOvercharge").selectedIndex = 0;
 	}
-        else if (ocs["type"] == "NpRemainHpDamage") {//双子宝具
+        else if (ocs.type == "NpRemainHpDamage") {//双子宝具
             calNpRemainHpDamage();
         }
-        else if (ocs["type"] == "OcNpDamage") {//自爆弓
+        else if (ocs.type == "OcNpDamage") {//自爆弓
             calOcNpDamage();
         }
-	else if (ocs["type"] == "OcCardBuff") {//R金时OC绿魔放
+	else if (ocs.type == "OcCardBuff") {//R金时OC绿魔放
             let o = getFloat("txtCardBuff");
             $("txtCardBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
-        else if (ocs["type"] == "OcAtkBuff") {//B兰OC加攻
+        else if (ocs.type == "OcAtkBuff") {//B兰OC加攻
             let o = getFloat("txtAttackBuff");
             $("txtAttackBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
-        else if (ocs["type"] == "DefDecrease") {//宝具前降防
+        else if (ocs.type == "DefDecrease") {//宝具前降防
             let o = getFloat("txtEnemyDefence");
             $("txtEnemyDefence").value = o - ocs[ocLevel] + ocs[oldocLevel];
         }
-        else if (ocs["type"] == "OcNpStrength") {//宫本半藏OC宝具威力提升
+        else if (ocs.type == "OcNpStrength") {//宫本半藏OC宝具威力提升
             let o = getFloat("txtNpStrength");
             $("txtNpStrength").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
-	else if (ocs["type"] == "CombinedDecrease") {
+	else if (ocs.type == "CombinedDecrease") {
             let o = getFloat("txtEnemyDefence");
             $("txtEnemyDefence").value = o - ocs[ocLevel] + ocs[oldocLevel];
 	    o = getFloat("txtCardBuff");
             $("txtCardBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
-	else if (ocs["type"] == "NpSpecialAttack") {//宝具特攻
+	else if (ocs.type == "NpSpecialAttack") {//宝具特攻
             $("txtNpSpecialAttack").value = ocs[ocLevel];
         }
-        else if (ocs["type"] == "SpecialAttackBuff") {//杰克女性特攻
+        else if (ocs.type == "SpecialAttackBuff") {//杰克女性特攻
             let o = getFloat("txtSpecialAttack");
             $("txtSpecialAttack").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
